--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,38 @@
+<h1>Create a Team and Heroes!</h1>
 
+<form method="post" action="/teams">
+
+
+  <label for="name">Team Name: </label>
+  <input type="text" id="name" name="team[name]">
+  <label for="motto">Team Motto: </label>
+  <input type="text" id="motto" name="team[motto]">
+
+  <h2>Hero 1</h2>
+
+  <label for="name">Hero's Name: </label>
+  <input type="text" id="member1_name" name="team[members][][name]">
+  <label for="power">Hero's Power: </label>
+  <input type="text" id="member1_power" name="team[members][][power]">
+  <label for="biography">Hero's Biography: </label>
+  <input type="text" id="member1_bio" name="team[members][][biography]">
+
+  <h2>Hero 2</h2>
+
+  <label for="name">Hero's Name: </label>
+  <input type="text" id="member2_name" name="team[members][][name]">
+  <label for="power">Hero's Power: </label>
+  <input type="text" id="member2_power" name="team[members][][power]">
+  <label for="biography">Hero's Biography: </label>
+  <input type="text" id="member2_bio" name="team[members][][biography]">
+
+  <h2>Hero 3</h2>
+
+  <label for="name">Hero's Name: </label>
+  <input type="text" id="member3_name" name="team[members][][name]">
+  <label for="power">Hero's Power: </label>
+  <input type="text" id="member3_power" name="team[members][][power]">
+  <label for="biography">Hero's Biography: </label>
+  <input type="text" id="member3_bio" name="team[members][][biography]">
+  <input type="submit" value="submit">
+</form>
